src/app/components/navbar/navbar.component.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Kanit, sans-serif;
}

.active {
  color:var(--violachiaro) !important;
  font-weight: bold !important;
}
.navbar {
  height: 56px;
  background-color: var(--cardsbg);
  border-bottom: 1px solid var(--cardsbg);
  overflow: hidden;
}

.logo {
  width: 180px;
  position: absolute;
  top: 0%;
  left: 0;
  transform: translate(10%, 50%);
  z-index: 1;
}

svg {
  fill: var(--logo);
}

.navbar-links li a {
  display: block;
  text-decoration: none;
  color: var(--lilla);
  padding: 20px 20px;
  transition: 0.4s all;
}

.navbar-links li.navbar-dropdown {
  position: relative;
}

.navbar-links li.navbar-dropdown:hover .dropdown {
  visibility: visible;
  opacity: 1;
  transform: translateY(0px);
}

.navbar-links li.navbar-dropdown .dropdown {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  padding: 20px 0;
  top: 100%;
  transform: translateY(50px);
  left: 0;
  width: 250px;
  background-color: var(--cardsbg);
  border: 1px solid lightgray;
  border-radius: 20px;
  z-index: 111;
  transition: 0.3s all;
}

.navbar-links li.navbar-dropdown .dropdown a {
  padding-top: 10px;
  padding-bottom: 10px;
  font-weight: 400;
}

.navbar-dropdown .dropdown a:hover {
  padding-left: 30px;
}

.navbar-links li a:hover {
  color: lightgrey;
}

.navbar-links {
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(65%, -5%);
}

.flex-nav {
  display: flex;
  align-items: center;
}

.icon-rabbit {
  position: absolute;
  top: 0%;
  right: 0;
  transform: translate(-1350%, 60%);
}

.icon-globe svg {
  width: 25px;
  fill: var(--lilla);
  margin-top: 5px;
  margin-right: 1px;
}

.icon-dollar {
  position: absolute;
  top: 14px;
  right: 0;
  margin-right: 270px;
  color: var(--lilla);
}

.icon-setting svg {
  width: 25px;
  fill: var(--lilla);
  position: absolute;
  top: 5px;
  right: 0;
  transform: translate(-750%, 35%);
  z-index: 1;
}

button {
  -webkit-box-align: center;
  align-items: center;
  border: 0px;
  border-radius: 16px;
  box-shadow: rgb(14 14 44 / 40%) 0px -1px 0px 0px inset;
  cursor: pointer;
  display: inline-flex;
  font-family: inherit;
  font-size: 16px;
  font-weight: 600;
  -webkit-box-pack: center;
  justify-content: center;
  letter-spacing: 0.03em;
  line-height: 1;
  opacity: 1;
  outline: 0px;
  transition: background-color 0.2s ease 0s, opacity 0.2s ease 0s;
  height: 32px;
  padding: 0px 16px;
  background-color: rgb(31, 199, 212);
  color: white;
}

button {
  width: 160px;
  position: absolute;
  top: 0%;
  right: 0;
  transform: translate(-10%, 30%);
  z-index: 1;
}

.language-links li a {
  display: block;
  text-decoration: none;
  color: var(--violascuro);
  padding: 20px 20px;
  transition: 0.2s all;
}

.language-links li.language-dropdown {
  position: relative;
}

.language-links li.language-dropdown:hover .dropdown- {
  visibility: visible;
  opacity: 1;
  transform: translateY(0px);
}

.language-links li.language-dropdown .dropdown- {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  padding: 20px 0;
  top: 100%;
  transform: translateY(50px);
  left: 0;
  width: 200px;
  height: 420px;
  overflow: auto;
  background-color: var(--cardsbg);
  border: 1px solid lightgray;
  z-index: 111;
  transition: 0.3s all;
}

.language-links li.language-dropdown .dropdown- a {
  padding-top: 5px;
  padding-bottom: 5px;
  text-align: center;
  font-weight: 700;
}

.language-dropdown .dropdown- a:hover {
  padding-left: 30px;
  color: var(--violachiaro);
}

.language-links li a:hover {
  color: lightgrey;
}

.language-links {
  position: absolute;
  top: 0;
  right: 0;
  transform: translate(-870%, 30%);
}

@media screen and (min-width: 577px) {
  strong::after {
    content: " Wallet";
  }
}

@media (max-width: 852px) {
  .navbar {
    height: 55px;
  }

  .logo {
    position: absolute;
  }

  .navbar-links {
    position: absolute;
    top: 0;
    left: 0;
    transform: translate(0%, -100%);
  }

  .icon-rabbit {
    position: absolute;
    top: 0;
    right: 0;
    transform: translate(0%, -100%);
  }

  .icon-dollar {
    position: absolute;
    top: 0;
    right: 0;
    transform: translate(0%, -100%);
  }

}

@media (max-width: 576px) {
  .navbar {
    height: 55px;
  }

  .logo {
    position: absolute;
    top: 0%;
    right: 0;
    transform: translate(5%, 40%);
  }

  .navbar-links {
    position: absolute;
    top: 0;
    left: 0;
    transform: translate(0%, -100%);
  }

  .icon-rabbit {
    position: absolute;
    top: 0;
    right: 0;
    transform: translate(0%, -100%);
  }

  .icon-dollar {
    position: absolute;
    top: 0;
    right: 0;
    transform: translate(0%, -100%);
  }

  .language-links {
    position: absolute;
    top: 0;
    right: 0;
    margin-right: -75px;
  }

  .icon-setting svg {
    fill: var(--lilla);
    position: absolute;
    margin-right: -70px;
  }

  button {
    width: 100px;
    position: absolute;
    top: 0%;
    right: 0;
    transform: translate(-10%, 30%);
    z-index: 1;
  }

  .hide {
    display: none;
  }
}

